--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -17,7 +17,10 @@
 
     <div class="row flex-lg-row-reverse align-items-center px-4 pb-3">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="https://flibrary.info/images/get/27466077cfcef9505d3704a01d1b7f339a62c612424e46ed602aa3b188904cd5/png" class="d-block mx-lg-auto" alt="Learning Guides Example" loading="lazy" width="350">
+        <video autoplay="" muted="" loop="" width="100%" height="auto">
+	    <source src="/static/media/scrolling-guides-10s.webm" type="video/webm">
+	    <source src="/static/media/scrolling-guides-10s.mp4" type="video/mp4">
+	</video>
       </div>
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">{{ i18n!(self.i18n.catalog, "We create learning guides") }}</h1>
@@ -30,7 +33,7 @@
 
     <div class="row flex-lg-row align-items-center px-4 pb-3">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="https://flibrary.info/images/get/27466077cfcef9505d3704a01d1b7f339a62c612424e46ed602aa3b188904cd5/png" class="d-block mx-lg-auto" alt="Learning Guides Example" loading="lazy" width="350">
+        <img src="https://flibrary.info/images/get/27466077cfcef9505d3704a01d1b7f339a62c612424e46ed602aa3b188904cd5/png" class="d-block mx-lg-auto" alt="Learning Guides Example" loading="lazy" width="100%">
       </div>
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">{{ i18n!(self.i18n.catalog, "Join the community") }}</h1>
@@ -50,7 +53,7 @@
         <div class="col d-flex align-items-start">
           <div>
             <h4 class="fw-bold mb-0"><i class="bi bi-cloud-check-fill"></i> {{ i18n!(self.i18n.catalog, "All Cloud") }}</h4>
-            <p>{{ i18n!(self.i18n.catalog, "FLibrary is your personalized learning hub. From notes to past papers, everything subscribed on cloud for your access anytime, anywhere.") }}</p>
+            <p>{{ i18n!(self.i18n.catalog, "FLibrary is your personalized learning hub. From notes to past papers, everything subscribed is on cloud for your access anytime, anywhere.") }}</p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
