--- a/sails-bin/templates/joinus.html
+++ b/sails-bin/templates/joinus.html
@@ -10,6 +10,12 @@
     <br>
 
     <div class="row flex-lg-row-reverse align-items-center px-4 pb-3">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <video autoplay="" muted="" loop="" width="100%" height="auto">
+	    <source src="/static/media/light-bulb.webm" type="video/webm">
+	    <source src="/static/media/light-bulb.mp4" type="video/mp4">
+	</video>
+      </div>
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">{{ i18n!(self.i18n.catalog, "Creators") }}</h1>
         <p class="lead">{{ i18n!(self.i18n.catalog, "Skilled at certain fields or courses? Create learning guides on subjects or anything creative (like building a rocket), either independent or based on a course taught at your university, and receive rewards to your knowledge and contribution.") }}</p>
@@ -18,13 +24,16 @@
          <li class="list-group-item">{{ i18n!(self.i18n.catalog, "Concrete knowledge in certain fields") }}</li>
          <li class="list-group-item">{{ i18n!(self.i18n.catalog, "Stick to our principles and standards") }}</li>
        </ul>
-	<a href="/store" class="btn btn-primary btn-lg my-1" role="button">{{ i18n!(self.i18n.catalog, "Apply") }}</a>
+	<a href="https://forms.gle/e7CA8W9nh7tEsHv77" class="btn btn-primary btn-lg my-1" role="button">{{ i18n!(self.i18n.catalog, "Apply") }}</a>
       </div>
     </div>
 
    <br>
 
-    <div class="row flex-lg-row align-items-center px-4 pb-3">
+   <div class="row flex-lg-row align-items-center px-4 pb-3">
+     <div class="col-10 col-sm-8 col-lg-6">
+        <img src="/static/media/developer-hero.png" class="d-block mx-lg-auto" alt="Learning Guides Example" loading="lazy" width="100%">
+      </div>
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">{{ i18n!(self.i18n.catalog, "Developers") }}</h1>
 <p class="lead">{{ i18n!(self.i18n.catalog, "Our code is what builds our dreams. Join us as a developer, help inform what's the next feature, and make dreams true with your unique skills.") }}</p>
@@ -33,7 +42,7 @@
          <li class="list-group-item">{{ i18n!(self.i18n.catalog, "Basic knowledge in network programming") }}</li>
          <li class="list-group-item">{{ i18n!(self.i18n.catalog, "Strive for perfection.") }}</li>
        </ul>
-        <a href="https://circle.flibrary.info" class="btn btn-primary btn-lg my-1" role="button">{{ i18n!(self.i18n.catalog, "Apply") }}</a>
+        <a href="https://forms.gle/e7CA8W9nh7tEsHv77" class="btn btn-primary btn-lg my-1" role="button">{{ i18n!(self.i18n.catalog, "Apply") }}</a>
       </div>
     </div>
 
