completed landing page

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -4,7 +4,7 @@
   {% block head %}
   <meta charset="utf-8">
   <title>{% block title %}{% endblock title %} | FLibrary</title>
-  <meta name="description" content="An online learning store and community">
+  <meta name="description" content="{{ i18n!(self.i18n.catalog, "FLibrary is the ultimate destination for discovering, discussing, and distributing learning guides.") }}">
   <meta name="author" content="FLibrary Development Taskforce">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
