--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -33,7 +33,7 @@
 
     <div class="row flex-lg-row align-items-center px-4 pb-3">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="https://flibrary.info/images/get/27466077cfcef9505d3704a01d1b7f339a62c612424e46ed602aa3b188904cd5/png" class="d-block mx-lg-auto" alt="Learning Guides Example" loading="lazy" width="100%">
+        <img src="/static/media/circle.png" class="d-block mx-lg-auto" alt="Learning Guides Example" loading="lazy" width="100%">
       </div>
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">{{ i18n!(self.i18n.catalog, "Join the community") }}</h1>
