--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -42,6 +42,7 @@
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/store">{{ i18n!(self.i18n.catalog, "Store") }}</a></li>
             <li class="nav-item"><a class="nav-link" href="/messages">{{ i18n!(self.i18n.catalog, "Messages") }}</a></li>
+	    <li class="nav-item"><a class="nav-link" href="/digicons">{{ i18n!(self.i18n.catalog, "Creator Center") }}</a></li>
 	    <li class="nav-item"><a class="nav-link" href="/user">{{ i18n!(self.i18n.catalog, "Portal") }}</a></li>
 	    <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
