--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -23,8 +23,8 @@
 	</video>
       </div>
       <div class="col-lg-6">
-        <h2 class="display-5 fw-bold lh-1 mb-3">{{ i18n!(self.i18n.catalog, "We create learning guides") }}</h1>
-        <p class="lead">{{ i18n!(self.i18n.catalog, "Tired of duplicated descriptions and hard-to-locate key-points in textbooks? Frustrated with short but impossible-to-understand others' notes lacking coherent logic? We strike a balance in between: learning guides. They are coherent on first read and always to-the-point, providing an enjoyable learning or referencing experience.") }}</p>
+        <h2 class="display-5 fw-bold lh-1 mb-3">{{ i18n!(self.i18n.catalog, "Study guides for your courses") }}</h1>
+        <p class="lead">{{ i18n!(self.i18n.catalog, "Tired of duplicated descriptions and hard-to-locate key-points in textbooks? Frustrated with short but impossible-to-understand others' notes lacking coherent logic? We strike a balance in between: study guides targeting specific courses you needed. They are coherent on first read and always to-the-point, providing an enjoyable learning or referencing experience.") }}</p>
 	<a href="/store" class="btn btn-primary btn-lg my-1" role="button">{{ i18n!(self.i18n.catalog, "Discover Store") }}</a>
       </div>
     </div>
