--- a/sails-bin/templates/digicons/create_digicon.html
+++ b/sails-bin/templates/digicons/create_digicon.html
@@ -10,7 +10,7 @@
     <div class="form-group row">
       <label for="inputName" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Name") }}</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputProd" placeholder="name" name="name">
+        <input type="text" class="form-control" id="inputProd" placeholder="name" name="name" required>
       </div>
     </div>
     <br>
