--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -17,7 +17,7 @@
 
     <div class="row flex-lg-row-reverse align-items-center px-4 pb-3">
       <div class="col-10 col-sm-8 col-lg-6">
-        <video autoplay="" muted="" loop="" width="100%" height="auto">
+        <video autoplay="" muted="" loop="" playsinline="" width="100%" height="auto">
 	    <source src="/static/media/scrolling-guides-10s.webm" type="video/webm">
 	    <source src="/static/media/scrolling-guides-10s.mp4" type="video/mp4">
 	</video>
