add PayPal support

--- a/sails-bin/templates/admin/orders.html
+++ b/sails-bin/templates/admin/orders.html
@@ -31,7 +31,7 @@
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_price()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
-	  <td><a href="{{ uri!("/orders", crate::orders::cancel_order(order.1.get_id(), uri!("/admin", admin_orders).to_string())) }}" class="btn btn-warning" role="button">Refund</a> <a href="{{ uri!("/admin", crate::admin::finish_order(order.1.get_id())) }}" class="btn btn-success" role="button">Finish</a></td>
+	  <td><a href="{{ uri!("/orders", crate::orders::cancel_order_alipay(order.1.get_id())) }}" class="btn btn-warning" role="button">Refund</a> <a href="{{ uri!("/admin", crate::admin::finish_order(order.1.get_id())) }}" class="btn btn-success" role="button">Finish</a></td>
 	</tr>
 	{% endfor %}
       </tbody>
@@ -67,7 +67,7 @@
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_price()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
-	  <td><a href="{{ uri!("/orders", crate::orders::cancel_order(order.1.get_id(), uri!("/admin", admin_orders).to_string())) }}" class="btn btn-warning" role="button">Cancel</a></td>
+	  <td><a href="{{ uri!("/orders", crate::orders::cancel_order_alipay(order.1.get_id())) }}" class="btn btn-warning" role="button">Cancel</a></td>
 	</tr>
 	{% endfor %}
       </tbody>
