--- a/sails-bin/templates/digicons/create_digicon.html
+++ b/sails-bin/templates/digicons/create_digicon.html
@@ -16,7 +16,7 @@
     <br>
 
     <div class="form-group row">
-      <label for="inputCategory" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Storage Type (cannot be changed afterwards)") }}</label>
+      <label for="inputStorageType" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Storage Type (cannot be changed afterwards)") }}</label>
       <div class="col-sm-4">
         <select class="form-select" aria-label="Default select example" name="storage_type">
 	    <option value="gitrepo">{{ i18n!(self.i18n.catalog, "Manually upload file") }}</option>
