--- a/sails-bin/templates/orders/checkout.html
+++ b/sails-bin/templates/orders/checkout.html
@@ -16,7 +16,7 @@
     </tr>
     <tr>
       <th scope="row">{{ i18n!(self.i18n.catalog, "Price per unit") }}</th>
-      <td>{{ i18n!(self.i18n.catalog, "USD") }} {{ prod.get_price() }}</td>
+      <td>{{ "{:?}"|format(prod.get_currency()) }} {{ prod.get_price() }}</td>
     </tr>
     <tr>
       <th scope="row">{{ i18n!(self.i18n.catalog, "Quantity in stock") }}</th>
@@ -41,6 +41,26 @@
       {% when None %}
       <input type="text" class="form-control" id="inputAddress" name="address" placeholder="{{ i18n!(self.i18n.catalog, "If content is completely digital, you may leave it blank.") }}" required>
       {% endmatch %}
+    </div>
+    <br>
+
+    <div class="form-group row">
+      <label for="inputPayment" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Payment method") }}</label>
+      <div class="col-sm-4">
+        <select class="form-select" aria-label="Default select example" name="payment">
+	    {% if sails_db::enums::Payment::Alipay.compatible_with(prod.get_currency()) %}
+	    <option value="alipay">{{ i18n!(self.i18n.catalog, "AliPay (supports CNY only)") }}</option>
+	    {% else %}
+	    <option value="alipay" disabled>{{ i18n!(self.i18n.catalog, "AliPay (supports CNY only)") }}</option>
+	    {% endif %}
+
+	    {% if sails_db::enums::Payment::Paypal.compatible_with(prod.get_currency()) %}
+	    <option value="paypal">{{ i18n!(self.i18n.catalog, "PayPal (supports all currency)") }}</option>
+	    {% else %}
+	    <option value="paypal" disabled>{{ i18n!(self.i18n.catalog, "PayPal (supports all currency)") }}</option>
+	    {% endif %}
+	</select>
+      </div>
     </div>
     <br>
 
