--- a/sails-bin/templates/orders/order_info_paypal.html
+++ b/sails-bin/templates/orders/order_info_paypal.html
@@ -1,9 +1,18 @@
 {% extends "order_info.html" %}
+
+{% block refunded_details %}
+      {{ i18n!(self.i18n.catalog, "If you don't agree with the order details, please click the \"update\" button below.") }}<br>
+      <a href="{{ uri!("/orders", crate::orders::progress_paypal(self.order.get_id())) }}" class="btn btn-primary" role="button">{{ i18n!(self.i18n.catalog, "Update") }}</a>
+{% endblock refunded_details %}
+
 {% block placed_details %}
+    {{ i18n!(self.i18n.catalog, "Use PayPal to complete your order. If you are not automatically redirected after approving the order, click \"Manual update\" button below.") }}<br>
+    <br>
     <script src="https://www.paypal.com/sdk/js?client-id={{client_id}}&currency={{ "{:?}"|format(prod.get_currency()) }}"></script>
     <!-- Set up a container element for the button -->
     <div id="paypal-button-container"></div>
     <br>
+    <a href="{{ uri!("/orders", crate::orders::progress_alipay(self.order.get_id())) }}" class="btn btn-success" role="button">{{ i18n!(self.i18n.catalog, "Manual update") }}</a>
     <a href="{{ uri!("/orders", crate::orders::cancel_order_paypal(self.order.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('{{ i18n!(self.i18n.catalog, "Cancel your order? This CANNOT be reverted") }}');">{{ i18n!(self.i18n.catalog, "Cancel order") }}</a>
 
     <script>
