--- a/sails-bin/templates/orders/checkout.html
+++ b/sails-bin/templates/orders/checkout.html
@@ -39,7 +39,7 @@
       {% when Some with (addr) %}
       <input type="text" class="form-control" id="inputAddress" name="address" value="{{addr}}" placeholder="{{ i18n!(self.i18n.catalog, "If content is completely digital, you may leave it blank.") }}">
       {% when None %}
-      <input type="text" class="form-control" id="inputAddress" name="address" placeholder="{{ i18n!(self.i18n.catalog, "If content is completely digital, you may leave it blank.") }}" required>
+      <input type="text" class="form-control" id="inputAddress" name="address" placeholder="{{ i18n!(self.i18n.catalog, "If content is completely digital, you may leave it blank.") }}">
       {% endmatch %}
     </div>
     <br>
