--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -80,9 +80,13 @@
   </script>
   {% endblock script %}
   <br>
-  <footer id="footer" class="footer mt-auto py-3 bg-light text-muted">
-    <div class="container">
-      <span>Copyright © 2021-2022, FLibrary Development Taskforce<br>Licensed under MIT License.<br>Made with ❤ using NixOS, Rust, and Bootstrap.</span>
+  <footer id="footer" class="footer py-4 mt-auto bg-light text-muted">
+    <div class="d-flex flex-wrap justify-content-between container">
+      <p>Copyright © 2021-2022, FLibrary Development Taskforce.<br>Licensed under MIT License.</p>
+      <ul class="list-unstyled d-flex">
+        <li class="ms-3"><a class="link-dark" href="https://twitter.com/flibrary_en"><i class="bi bi-twitter"></i></a></li>
+	<li class="ms-3"><a class="link-dark" href="https://t.me/theflibrary"><i class="bi bi-telegram"></i></a></li>
+      </ul>
     </div>
   </footer>
   </div>
