--- a/sails-bin/templates/root/root.html
+++ b/sails-bin/templates/root/root.html
@@ -19,7 +19,6 @@
 	  <th data-field="id" data-sortable="true" scope="col">Email</th>
 	  <th data-field="name" data-sortable="true" scope="col">Name</th>
 	  <th data-field="school" data-sortable="true" scope="col">School</th>
-	  <th data-field="activated" data-sortable="true" scope="col">Activated</th>
 	  <th data-field="actions" scope="col">Actions</th>
 	  <th data-field="delete" scope="col">Dangerous</th>
 	</tr>
@@ -30,8 +29,7 @@
 	  <th scope="row"><a href="{{ uri!("/user", crate::user::portal_guest(user.get_id())) }}">{{ user.get_id() }}</a></th>
 	  <td>{{user.get_name()}}</td>
 	  <td>{{user.get_school()}}</td>
-	  <td>{{ "{:?}"|format(user.get_validated()) }}</td>
-	  <td><a href="{{ uri!("/root", crate::root::activate_user(user.get_id())) }}" class="btn btn-success" role="button"><i class="bi bi-key-fill"></i></a> <a href="{{ uri!("/root", crate::root::user_status(user.get_id())) }}" class="btn btn-primary" role="button">Sts</a></td>
+	  <td><a href="{{ uri!("/root", crate::root::user_status(user.get_id())) }}" class="btn btn-primary" role="button">Sts</a></td>
 	  <td><a href="{{ uri!("/root", crate::root::delete_user(user.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">Delete</a>
 	</tr>
 	{% endfor %}
