minor UI margin adjustment

--- a/sails-bin/templates/user/portal.html
+++ b/sails-bin/templates/user/portal.html
@@ -2,7 +2,7 @@
 {% block title %}{{ i18n!(self.i18n.catalog, "Portal") }}{% endblock title %}
 
 {% block intro %}{{ i18n!(self.i18n.catalog, "Here you can manage your products and account") }}{% endblock intro %}
-{% block update_button %}<a href="/user/update_user_page" class="btn btn-primary" role="button">{{ i18n!(self.i18n.catalog, "Update") }}</a> <a href="https://id.flibrary.info/realms/Customers/account/" class="btn btn-warning" role="button">{{ i18n!(self.i18n.catalog, "Manage your FLibrary ID") }}</a>{% endblock update_button %}
+{% block update_button %}<a href="/user/update_user_page" class="btn btn-primary my-1" role="button">{{ i18n!(self.i18n.catalog, "Update") }}</a> <a href="https://id.flibrary.info/realms/Customers/account/" class="btn btn-warning my-1" role="button">{{ i18n!(self.i18n.catalog, "Manage your FLibrary ID") }}</a>{% endblock update_button %}
 {% block postprod_button %}<a href="/store/post_prod" class="btn btn-primary" role="button">{{ i18n!(self.i18n.catalog, "Create a product") }}</a>{% endblock postprod_button %}
 
 {% block digicons_owned %}
